--- a/templates/recommendation.html
+++ b/templates/recommendation.html
@@ -176,7 +176,7 @@
     </div>
 
 <footer style="text-align:center; padding: 10px; font-size: 14px;">
-  Made with ❤️ by Rithik
+  Made with ❤️ by Rithik Srivastava
 </footer>
 
 </body>
