--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
     </div>
 
 <footer style="text-align:center; padding: 10px; font-size: 14px;">
-  Made with ❤️ by Rithik Srivastava
+  Made with ❤️ by Rithik
 </footer>
 
 </body>
